Index page updated and Education page added

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
         <nav role="navigation" class="probootstrap-nav hidden-xs">
           <ul class="probootstrap-main-nav">
             <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
+            <li><a href="education.html">Education</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
           <ul class="probootstrap-right-nav hidden-xs">
-            <li><a href="https://github.com/vedgupta789" target="_blank"><i class="icon-github"></i></a></li>
-              <li><a href="https://www.facebook.com/ved.gupta.9699" target="_blank"><i class="icon-facebook"></i></a></li>
+              <li><a href="https://github.com/vedgupta789" target="_blank"><i class="icon-github2"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/ved-gupta-9955b8197/" target="_blank"><i class="icon-linkedin"></i></a></li>
               <li><a href="https://www.instagram.com/vedd_gupta/" target="_blank"><i class="icon-instagram2"></i></a></li>
           </ul>
           <div class="extra-text visible-xs"> 
@@ -54,8 +54,8 @@
             <p>Barabanki, Uttar Pradesh, India</p>
             <h5>Connect</h5>
             <ul class="social-buttons">
-              <li><a href="https://github.com/vedgupta789" target="_blank"><i class="icon-github"></i></a></li>
-              <li><a href="https://www.facebook.com/ved.gupta.9699" target="_blank"><i class="icon-facebook"></i></a></li>
+              <li><a href="https://github.com/vedgupta789" target="_blank"><i class="icon-github2"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/ved-gupta-9955b8197/" target="_blank"><i class="icon-linkedin"></i></a></li>
               <li><a href="https://www.instagram.com/vedd_gupta/" target="_blank"><i class="icon-instagram2"></i></a></li>
             </ul>
           </div>
@@ -65,7 +65,7 @@
   <!-- END: header -->
   <section class="probootstrap-slider flexslider">
     <ul class="slides">
-      <li style="background-image: url(img/slider_1.jpg);">
+      <li style="background-image: url(https://cdn.pixabay.com/photo/2016/03/12/23/18/man-1253004_960_720.jpg);">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
@@ -351,14 +351,14 @@
 
   <footer class="probootstrap-footer probootstrap-bg">
     <div class="container">
-      <div class="row mb60">
+      <!-- <div class="row mb60">
         <div class="col-md-3">
           <div class="probootstrap-footer-widget">
             <h4 class="heading">About Black.</h4>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
             <p><a href="#">Read more...</a></p>
           </div> 
-        </div>
+        </div> -->
         <!-- <div class="col-md-3">
           <div class="probootstrap-footer-widget probootstrap-link-wrap">
             <h4 class="heading">Quick Links</h4>
@@ -383,7 +383,7 @@
             </ul>
           </div> 
         </div> -->
-        <div class="col-md-3">
+        <!-- <div class="col-md-3">
           <div class="probootstrap-footer-widget probootstrap-link-wrap">
             <h4 class="heading">Reach me</h4>
             <p>Far far away behind the word mountains far from.</p>
@@ -395,7 +395,7 @@
             </form>
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="row copyright">
         <div class="col-md-6">
           <div class="probootstrap-footer-widget">
@@ -424,8 +424,8 @@
   <script>
 
     var i = 0;
-    var txt = 'HI!    I AM VED GUPTA.';
-    var speed = 250;
+    var txt = 'HI!  I AM VED GUPTA.';
+    var speed = 200;
     $(document).ready(typeWriter);
     function typeWriter() {
       if (i < txt.length) {
