--- a/contact_test.html
+++ b/contact_test.html
@@ -67,7 +67,7 @@
 
 			Email.send({
         SecureToken:"fbf31702-bb7f-4a4e-9c1c-4ccf17ee777f",
-				To: 'optimalweb09@gmail.com',
+				To: 'vedgupta789@gmail.com',
 				From: "demooptimalweb@gmail.com",
 				Subject: "New message on contact from "+name,
 				Body: Body
