contact page added and other pages updated

--- a/education.html
+++ b/education.html
@@ -37,8 +37,7 @@
           <ul class="probootstrap-main-nav">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="education.html">Education</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="project.html">Project</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
           <ul class="probootstrap-right-nav hidden-xs">
@@ -63,7 +62,7 @@
   <!-- END: header -->
   <section class="probootstrap-slider flexslider">
     <ul class="slides">
-      <li style="background-image: url(https://cdn.pixabay.com/photo/2015/09/09/20/54/book-933280_960_720.jpg);">
+      <li style="background-image: linear-gradient(rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.9)) , url(https://images.pexels.com/photos/3646901/pexels-photo-3646901.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
@@ -225,15 +224,15 @@
       <div class="row copyright">
         <div class="col-md-6">
           <div class="probootstrap-footer-widget">
-            <p>&copy; 2021 <a href="#">Ved Gupta</a>.<br> Resources taken from <a href="https://uicookies.com/">UI Cookies</a> and <a href="https://unsplash.com/">Unsplash</a></p>
+            <p>&copy; 2021 <a href="#">Ved Gupta</a>.<br> Resources taken from <a href="https://uicookies.com/">UI Cookies</a>, <a href="https://unsplash.com/">Unsplash</a> and <a href="https://pixabay.com/">Pixabey</a></p>
           </div>
         </div>
         <div class="col-md-6">
           <div class="probootstrap-footer-widget right">
             <ul class="probootstrap-social">
-              <li><a href="https://github.com/vedgupta789" target="_blank"><i class="icon-github"></i></a></li>
-              <li><a href="https://www.facebook.com/ved.gupta.9699" target="_blank"><i class="icon-facebook"></i></a></li>
-              <li><a href="https://www.instagram.com/vedd_gupta/" target="_blank"><i class="icon-instagram2"></i></a></li>
+              <li><a href="https://github.com/vedgupta789" target="_blank"><i class="icon-github2"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/ved-gupta-9955b8197/" target="_blank"><i class="icon-linkedin"></i></a></li>
+            <li><a href="https://www.instagram.com/vedd_gupta/" target="_blank"><i class="icon-instagram2"></i></a></li>
             </ul>
           </div>
         </div>
