--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
           <ul class="probootstrap-main-nav">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="education.html">Education</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="project.html">Project</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
           <ul class="probootstrap-right-nav hidden-xs">
@@ -165,7 +164,7 @@
 
           <figure>
             <div class="probootstrap-video">
-              <a href="https://m.youtube.com/watch?v=x22TJMv2RYo" class="popup-vimeo probootstrap-video-play"><i class="icon-play3"></i></a>
+              <a href="https://vimeo.com/45830194" class="popup-vimeo probootstrap-video-play"><i class="icon-play3"></i></a>
               <img src="img/slider_2.jpg" alt="Free HTML5 Bootstrap Template by uicookies.com" class="img-responsive img-border">
             </div>
             <figcaption>This is a caption. Far far away, behind the word mountains.</figcaption>
@@ -290,7 +289,7 @@
     <div class="probootstrap-cta probootstrap-animate">
       <h2 class="mb20">Do you have any amazing project in your mind? <br> Let's get started.</h2>
       <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-      <p><a href="#" role="button" class="btn btn-primary">Get in Touch</a></p>
+      <p><a href="contact.html" role="button" class="btn btn-primary">Get in Touch</a></p>
     </div>
   </div>
 
@@ -399,15 +398,15 @@
       <div class="row copyright">
         <div class="col-md-6">
           <div class="probootstrap-footer-widget">
-            <p>&copy; 2021 <a href="#">Ved Gupta</a>.<br> Resources taken from <a href="https://uicookies.com/">UI Cookies</a> and <a href="https://unsplash.com/">Unsplash</a></p>
+            <p>&copy; 2021 <a href="#">Ved Gupta</a>.<br> Resources taken from <a href="https://uicookies.com/">UI Cookies</a>, <a href="https://unsplash.com/">Unsplash</a> and <a href="https://pixabay.com/">Pixabey</a></p>
           </div>
         </div>
         <div class="col-md-6">
           <div class="probootstrap-footer-widget right">
             <ul class="probootstrap-social">
-              <li><a href="https://github.com/vedgupta789" target="_blank"><i class="icon-github"></i></a></li>
-              <li><a href="https://www.facebook.com/ved.gupta.9699" target="_blank"><i class="icon-facebook"></i></a></li>
-              <li><a href="https://www.instagram.com/vedd_gupta/" target="_blank"><i class="icon-instagram2"></i></a></li>
+              <li><a href="https://github.com/vedgupta789" target="_blank"><i class="icon-github2"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/ved-gupta-9955b8197/" target="_blank"><i class="icon-linkedin"></i></a></li>
+            <li><a href="https://www.instagram.com/vedd_gupta/" target="_blank"><i class="icon-instagram2"></i></a></li>
             </ul>
           </div>
         </div>
