--- a/education.html
+++ b/education.html
@@ -85,7 +85,7 @@
         <div class="col-md-4 col-sm-6 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a href="single-page.html"><img src="https://cdn.pixabay.com/photo/2014/04/05/11/39/read-316508_960_720.jpg" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
+              <a><img src="https://cdn.pixabay.com/photo/2014/04/05/11/39/read-316508_960_720.jpg" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
             </div>
             <div class="probootstrap-card-text">
               <div class="service left-icon">
@@ -104,7 +104,7 @@
         <div class="col-md-4 col-sm-6 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a href="single-page.html"><img src="https://cdn.pixabay.com/photo/2016/08/04/09/30/book-1568667_960_720.jpg" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
+              <a><img src="https://cdn.pixabay.com/photo/2016/08/04/09/30/book-1568667_960_720.jpg" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
             </div>
             <div class="probootstrap-card-text">
               <div class="service left-icon">
@@ -124,7 +124,7 @@
         <div class="col-md-4 col-sm-6 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a href="single-page.html"><img src="https://cdn.pixabay.com/photo/2018/05/26/06/46/graduation-cap-3430714_960_720.jpg" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
+              <a><img src="https://cdn.pixabay.com/photo/2018/05/26/06/46/graduation-cap-3430714_960_720.jpg" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
             </div>
             <div class="probootstrap-card-text">
               <div class="service left-icon">
@@ -155,7 +155,7 @@
           <div class="col-md-4">
             <div class="service left-icon probootstrap-animate">
               <div class="icon">
-                <img src="https://d3799k1g9t5tc9.cloudfront.net/img/glpuk799qnmj8hcnb0n4uf2b8rd38cnv.png" alt="PHP" srcset="" width="70%">
+                <a href="https://www.kohli.company/"><img src="https://d3799k1g9t5tc9.cloudfront.net/img/glpuk799qnmj8hcnb0n4uf2b8rd38cnv.png" alt="PHP" srcset="" width="70%"></a>
               </div>
               <div class="text">
                 <h3 class="heading">Entry Level PHP Ninja</h3>
