--- a/index.html
+++ b/index.html
@@ -165,8 +165,11 @@
 
           <figure>
             <div class="probootstrap-video">
-              <a href="https://vimeo.com/45830194" class="popup-vimeo probootstrap-video-play"><i class="icon-play3"></i></a>
-              <img src="img/slider_2.jpg" alt="Free HTML5 Bootstrap Template by uicookies.com" class="img-responsive img-border">
+<!--               <a href="https://vimeo.com/45830194" class="popup-vimeo probootstrap-video-play"><i class="icon-play3"></i></a>
+              <img src="img/slider_2.jpg" alt="Free HTML5 Bootstrap Template by uicookies.com" class="img-responsive img-border"> -->
+              <iframe src="https://explee.com/embed/video/nq7ryjj?" width="640" height="360"
+              frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+              </iframe>
             </div>
             <figcaption>This is a caption. Far far away, behind the word mountains.</figcaption>
           </figure>
