--- a/index.html
+++ b/index.html
@@ -164,8 +164,7 @@
 
           <figure>
             <div class="probootstrap-video">
-              <a href="https://vimeo.com/45830194" class="popup-vimeo probootstrap-video-play"><i class="icon-play3"></i></a>
-              <img src="img/slider_2.jpg" alt="Free HTML5 Bootstrap Template by uicookies.com" class="img-responsive img-border">
+              <img src="img/Welcome - 4092.gif" alt="WELCOME" class="img-responsive img-border">
             </div>
             <figcaption>This is a caption. Far far away, behind the word mountains.</figcaption>
           </figure>
