Update reach me url

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <div class="slides-text probootstrap-animate">
                 <h2 id="intro"></h2>
                 <p>A opportunity seeker</p>
-                <p><a href="https://uicookies.com/" target="_blank" class="btn btn-primary">Reach me</a></p>
+                <p><a href="contact.html" target="_blank" class="btn btn-primary">Reach me</a></p>
               </div>
             </div>
           </div>
