New Skill added (Digital Marketing)

--- a/index.html
+++ b/index.html
@@ -281,6 +281,24 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="service left-icon probootstrap-animate">
+            <div class="icon">
+              <img src="img/marketing.png" alt="BS4" srcset="" width="70%">
+            </div>
+            <div class="text">
+              <h3 class="heading">Bootstrap 3,4</h3>
+              <p>Done a Digital Marketing course provided by Google. Knows about Social Media Marketing, Email Marketing, Content Marketing, SEO, SEM etc</p>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <!-- END section -->
