--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
               <img src="img/marketing.png" alt="BS4" srcset="" width="70%">
             </div>
             <div class="text">
-              <h3 class="heading">Bootstrap 3,4</h3>
-              <p>Done a Digital Marketing course provided by Google. Knows about Social Media Marketing, Email Marketing, Content Marketing, SEO, SEM etc</p>
+              <h3 class="heading">Digital Marketing</h3>
+              <p>Done a Digital Marketing course provided by Google.</p>
               <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
